# pdf_extractor

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  pyproject.toml  requirements.txt  ruff.toml  specifications.md
.github/workflows/: monthly_ranking.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.streamlit/: config.toml
scripts/: advisor_matcher.py  app.py  assomption_extractor.py  copy_board.py  find_data_board.py  fix_ayoub_variations.py  get_monday_colors.py  idc_extractor.py  idc_statements_extractor.py  main.py  monday_automation.py  populate_status_history.py  robust_assomption_extractor.py  robust_extractor_base.py  robust_idc_extractor.py  robust_idc_statement_extractor.py  robust_uv_extractor.py  unify_notation.py  uv_extractor.py
src/: __init__.py  pipeline.py
src/app/: __init__.py  aggregation_ui.py  components.py  main.py  sidebar.py  state.py  styles.py
src/automations/: README.md  config.py  monthly_ranking.py
src/clients/: __init__.py  cache.py  json_repair.py  monday.py  openrouter.py  retry_handler.py
src/extractors/: __init__.py  assomption_extractor.py  base.py  idc_extractor.py  idc_statement_extractor.py  uv_extractor.py
src/models/: __init__.py  assomption.py  coercion.py  idc.py  idc_statement.py  uv.py
src/prompts/: __init__.py  assomption.yaml  idc.yaml  idc_statement.yaml  uv.yaml
src/tests/: __init__.py  discover_monday_ids.py  populate_status_history.py  test_advisor_conflicts.py  test_advisor_provisioning.py  test_advisor_status.py  (+21 more)
(+37 files in other folders)
