[project]
name = "pdf-extractor"
version = "0.1.0"
description = "Insurance commission PDF extractor with VLM support"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.45.0",
    "gspread>=6.2.1",
    "notebook>=7.4.7",
    "pandas>=2.2.0",
    "pandas-stubs==2.3.2.250926",
    "python-dotenv>=1.2.1",
    "tabula-py>=2.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pymupdf>=1.24.0",
    "pypdf2>=3.0.1",
    "openpyxl>=3.1.5",
]
